Fixing transcript overlapping  nav menu in video mode

--- a/app/styles/scene.css
+++ b/app/styles/scene.css
@@ -195,9 +195,6 @@
 	display:block
 }
 
-.scene-explore.currentScene .videoContainer {
-	z-index:2;
-}
 .scene-explore .contentMain {
 	width: 50%;
 	float:left;
